--- a/string_hash.html
+++ b/string_hash.html
@@ -5,7 +5,7 @@
 	<title>mifrey00's crypto tools - String Hash</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css"/>
 	<script type="text/javascript" src="js/sjcl.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
+	<script type="text/javascript" src="js/string_hash.js"></script>
 </head>
 <body>
 
