--- a/pbkdf2.html
+++ b/pbkdf2.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<h1>PBFK2 - Password-Based Key Derivation Function 2</h1>
+<h1>PBKDF2 - Password-Based Key Derivation Function 2</h1>
 
 <p>
 For example, the input fields are pre-filled with fictive data to generate a seed according to BIP39.
@@ -20,6 +20,7 @@ For example, the input fields are pre-filled with fictive data to generate a see
 References:
 <ul>
 	<li><a href="https://en.wikipedia.org/wiki/PBKDF2">PBKDF2 on Wikipedia</a></li>
+	<li><a href="https://gchq.github.io/CyberChef/#recipe=Derive_PBKDF2_key(%7B'option':'UTF8','string':'cross%20zone%20blouse%20resist%20afraid%20doll%20goose%20used%20thing%20recycle%20news%20always%20close%20acoustic%20popular%20kangaroo%20once%20focus%20protect%20library%20process%20zone%20matrix%20leader'%7D,512,2048,'SHA512',%7B'option':'UTF8','string':'mnemonicMyPassPhrase'%7D)">CyberChef</a></li>
 	<li><a href="https://github.com/bitcoin/bips/blob/master/bip-0039.mediawiki">BIP39 document</a></li>
 	<li><a href="https://iancoleman.io/bip39">Ian Coleman's BIP39 Mnemonic Code Converter</a></li>
 </ul>
